{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 174,
  "lineage": "52ef3ca8-9fa9-77b0-57e8-d7a492d3524d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:479263005543:instance/i-0586afcabaf8e9f68",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0586afcabaf8e9f68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02360f487ebf3e3d9",
            "private_dns": "ip-10-0-1-92.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-54-74-80-183.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.80.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0111740bc95924cfb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a95321bdc9e5570",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0369fd88c93149db0"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.tls_private_key.key",
            "module.sg.aws_security_group.SG-Bastion",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:479263005543:instance/i-0ba3c4989f82b9915",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba3c4989f82b9915",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc10c892caf7dd3a",
            "private_dns": "ip-10-0-3-7.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f5da0208950a060",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058e52a9c9b3c8fc2",
            "tags": {
              "Name": "Database"
            },
            "tags_all": {
              "Name": "Database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b46e6d2b040ef35"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.tls_private_key.key",
            "module.sg.aws_security_group.SG-Database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:479263005543:instance/i-0fd209db640bc1c76",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd209db640bc1c76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dcd39fa3d78ab0f8",
            "private_dns": "ip-10-0-2-13.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0751ac017bd95d27d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6cf612b5c17e2dc",
            "tags": {
              "Name": "Private-ec2"
            },
            "tags_all": {
              "Name": "Private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c5fdf7e2ab24b8d"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.tls_private_key.key",
            "module.sg.aws_security_group.SG-Private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:479263005543:instance/i-099ffd3670fdcfaf3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099ffd3670fdcfaf3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c09546af0873f8a",
            "private_dns": "ip-10-0-1-93.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-3-253-41-174.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.253.41.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f68efb232b3b9335",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a95321bdc9e5570",
            "tags": {
              "Name": "Public-ec2"
            },
            "tags_all": {
              "Name": "Public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09bb4258156647e56"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.tls_private_key.key",
            "module.sg.aws_security_group.SG-Public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:security-group/sg-0369fd88c93149db0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0369fd88c93149db0",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.54.78.148/32",
                  "185.230.204.108/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230218224108751000000001",
            "name_prefix": "terraform-",
            "owner_id": "479263005543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Bastion"
            },
            "tags_all": {
              "Name": "SG-Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:security-group/sg-04b46e6d2b040ef35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b46e6d2b040ef35",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230218224109607800000004",
            "name_prefix": "terraform-",
            "owner_id": "479263005543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Database"
            },
            "tags_all": {
              "Name": "SG-Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:security-group/sg-08c5fdf7e2ab24b8d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c5fdf7e2ab24b8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230218224108752200000003",
            "name_prefix": "terraform-",
            "owner_id": "479263005543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Private"
            },
            "tags_all": {
              "Name": "SG-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:security-group/sg-09bb4258156647e56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bb4258156647e56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230218224108752100000002",
            "name_prefix": "terraform-",
            "owner_id": "479263005543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Public"
            },
            "tags_all": {
              "Name": "SG-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06855886f4eeff67c",
            "domain": "vpc",
            "id": "eipalloc-06855886f4eeff67c",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-72-39-62.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.39.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:internet-gateway/igw-0c51c4b4b9f6740a9",
            "id": "igw-0c51c4b4b9f6740a9",
            "owner_id": "479263005543",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06855886f4eeff67c",
            "connectivity_type": "public",
            "id": "nat-0681bf8e43a72283d",
            "network_interface_id": "eni-0af4b84f99f9c523b",
            "private_ip": "10.0.1.252",
            "public_ip": "54.72.39.62",
            "subnet_id": "subnet-00a95321bdc9e5570",
            "tags": {
              "Name": "NatGateway"
            },
            "tags_all": {
              "Name": "NatGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_sub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:route-table/rtb-047f68ce80b4ac31c",
            "id": "rtb-047f68ce80b4ac31c",
            "owner_id": "479263005543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0681bf8e43a72283d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:route-table/rtb-04249f3cf7e7a8e97",
            "id": "rtb-04249f3cf7e7a8e97",
            "owner_id": "479263005543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c51c4b4b9f6740a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-crt"
            },
            "tags_all": {
              "Name": "public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008ab9ab93388cf7c",
            "route_table_id": "rtb-04249f3cf7e7a8e97",
            "subnet_id": "subnet-00a95321bdc9e5570"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-crt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_sub_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eca933536b4b4fe",
            "route_table_id": "rtb-047f68ce80b4ac31c",
            "subnet_id": "subnet-0a6cf612b5c17e2dc"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_sub_route_table",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:subnet/subnet-058e52a9c9b3c8fc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058e52a9c9b3c8fc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "479263005543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database"
            },
            "tags_all": {
              "Name": "database"
            },
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:subnet/subnet-0a6cf612b5c17e2dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6cf612b5c17e2dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "479263005543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:subnet/subnet-00a95321bdc9e5570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a95321bdc9e5570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "479263005543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0c306b90370936e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:479263005543:vpc/vpc-0c306b90370936e88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1f6dd376c76922b",
            "default_route_table_id": "rtb-0fb9bef0356573472",
            "default_security_group_id": "sg-0881a32c026bcb074",
            "dhcp_options_id": "dopt-00cda2b8df0bb33f7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c306b90370936e88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb9bef0356573472",
            "owner_id": "479263005543",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}